--- a/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
@@ -1,11 +1,11 @@
 ﻿<nav class="user-navigation col">
-    <a href="" class="active">گزینه</a>
-    <a href="">تغییر رمز عبور</a>
-    <a href="">کیف پول</a>
-    <a href="">سبد خرید</a>
-    <a href="">لیست مقایسه</a>
+    <a href="/User/Profile" class="active">پروفایل</a>
+    <a href="/User/Profile/ChangePassword">تغییر رمز عبور</a>
+    <a href="/User/Wallet">کیف پول</a>
+    <a href="/User/Cart">سبد خرید</a>
+    <a href="/User/Comparison">لیست مقایسه</a>
     <a href="">سابقه خرید ها</a>
-    <a href="">لیست علاقه مندی ها</a>
-    <a href="">پیگیری سفارش</a>
+    <a href="/User/Bookmarks">لیست علاقه مندی ها</a>
+    <a href="/User/Order">پیگیری سفارش</a>
     <a href="">پشتیبانی</a>
 </nav>
