--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -133,10 +133,10 @@
                             <div class="mat-card">
                                 <ul class="col g-2">
                                     <li>
-                                        <a class="link-text" href="">پروفایل</a>
+                                        <a class="link-text" href="/User/Profile">پروفایل</a>
                                     </li>
                                     <li>
-                                        <a class="link-text" href="">سبد خرید</a>
+                                        <a class="link-text" href="/User/Cart">سبد خرید</a>
                                     </li>
                                     <li>
                                         <a class="link-text" href="/LogOut">خروج</a>
