--- a/GhasreMobile/Views/Shared/Components/DeliveryInContactView/DeliveryInContactView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/DeliveryInContactView/DeliveryInContactView.cshtml
@@ -1,30 +1,30 @@
 ﻿@model DeliveryVm
-<form id="ajaxresultDeliveryInContact" class="request mat-card" asp-action="Delivery" asp-controller="Home" method="post" asp-area=""
+<form id="ajaxresultDeliveryInContact" class="request mat-card" asp-action="Delivery" method="post" asp-area=""
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-mode="replace"
-      data-ajax-complete="LoadingEnd()"
+      data-ajax-complete="endDeliveryInContact()"
       data-ajax-update="#ajaxresultDeliveryInContact">
     <h3>درخواست خدمات درب منزل</h3>
-    <p class="text-3">برای درحواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
+    <p class="text-3">برای درخواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
     <div class="fg-col">
         <label for="TelNo" class="fg-label">شماره تلفن</label>
-        <input id="TellNo" name="TellNo" type="tel" class="entry" asp-for="TellNo" />
+        <input name="TellNo" type="tel" class="entry" asp-for="TellNo" />
         <span class="text-danger" asp-validation-for="TellNo"></span>
     </div>
     <div class="fg-col">
         <label for="Name" class="fg-label">نام و نام خانوادگی</label>
-        <input id="Name" name="Name" type="text" class="entry" asp-for="Name" />
+        <input name="Name" type="text" class="entry" asp-for="Name" />
         <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div class="fg-col">
         <label for="Address" class="fg-label">توضیحات</label>
-        <textarea id="Message" name="Message" class="entry" asp-for="Message"></textarea>
+        <textarea name="Message" class="entry" asp-for="Message"></textarea>
         <span class="text-danger" asp-validation-for="Message"></span>
     </div>
     <div class="fg-col">
         <label for="Address" class="fg-label">آدرس</label>
-        <textarea id="Address" name="Address" class="entry" asp-for="Address"></textarea>
+        <textarea name="Address" class="entry" asp-for="Address"></textarea>
         <span class="text-danger" asp-validation-for="Address"></span>
     </div>
     <div class="rowr">
@@ -32,7 +32,7 @@
     </div>
 </form>
 <script>
-    function endDelivery() {
+    function endDeliveryInContact() {
         $("input").val("");
         $("textarea").val("");
         UIkit.notification('درخواست شما ثبت شد');
