--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -110,9 +110,17 @@
                             <a href="#" class="btn btn-info btn-sm">افزودن</a>
                         </div>
                     </div>
-                    <div class="form-inline col-md-7">
-                        <label class="ml-5">عنوان ویژگی:</label>
-                        <input class="form-control form-control-sm" placeholder="مثال : 32 گیگابایت">
+                    <div class="form-inline mt-2">
+                        <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">عنوان ویژگی:</label>
+                        <input class="form-control form-control-sm col-md-3" placeholder="مثال : 32 گیگابایت">
+                    </div>
+                    <div class="form-inline mt-2">
+                        <label class="ml-5  p-0 col-md-2 uk-text-right justify-content-start">عنوان ویژگی2222:</label>
+                        <input class="form-control form-control-sm col-md-3" placeholder="مثال : 32 گیگابایت">
+                    </div>
+                    <div class="form-inline mt-2">
+                        <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">عنوانننننن ویژگی:</label>
+                        <input class="form-control form-control-sm col-md-3" placeholder="مثال : 32 گیگابایت">
                     </div>
                     <hr />
                     <div class="mt-3">
