--- a/GhasreMobile/Views/Blog/ViewBlog.cshtml
+++ b/GhasreMobile/Views/Blog/ViewBlog.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TblBlog
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -23,12 +23,15 @@
 </nav>
 
 <div class="mat-card">
-    <h3>نقد و بررسی هواوی MediaPad M5 Lite 8</h3>
+    <h3>@Model.Title</h3>
+    <img style="display:block;margin:0 auto;" src="~/Images/Blogs/@Model.MainImage" alt="" />
+
     <p>
-        نقد و بررسی هوآوی MediaPad M5 Lite 8
-        نسخه مدیا‌پَد اِم 5 لایت8 توسط شرکت هوآوی چین در مارس 2019 معرفی و در همان ماه نیز در بازار منتشر شد. این نسخه از مدیاپَدهای هوآوی میان‌رده محسوب می‌شوند. زیرا براساس تکنولوژی‌های بکار رفته در آن (که در ادامه بیشتر درباره آن‌ها صحبت خواهیم کرد) نمی‌توانند برنامه‌های نیازمند به گرافیک بالا را پشتیبانی کنند. این در حالی است که روند توسعه کیفی و تکنولوژیکی تبلت‌ها (برخلاف گوشی‌های هوشمند) بطور کلی و در سطح جهانی کُند است و به همین خاطر نمی‌توان توقع چندانی از تبلت‌ها بطور کلی و بطور خاص این سری از تبلت‌های هوآوی داشت. اگرچه خواهیم دید که ویژگی‌های تکنولوژیکی آن، دستهِ کمی از تکنولوژی‌های پیشرفته گوشی‌های هوشمند ندارد.
+        @Model.Description
     </p>
-    <img src="~/st/r/ads/a3.jpg" alt="" />
+    <p>
+        @Html.Raw(Model.BodyHtml)
+    </p>
 </div>
 
 <div class="mat-card">
