--- a/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/GalleryView/GalleryView.cshtml
@@ -11,9 +11,8 @@
         <div class="grid" uk-lightbox>
             @foreach (var item in Model)
             {
-                <a href="~/Images/Blogs/@item.Image" data-caption="نام"><img src="~/Images/Blogs/@item.Image" alt="" /></a>
+                @*<a href="~/Images/Blogs/@item.Image" data-caption="نام"><img src="~/Images/Blogs/@item.Image" alt="" /></a>*@
             }
-            <img src="~/Images/Blogs/a1.jpg" />
         </div>
         <div class="row">
             <a class="btn btn-secondary uk-margin-auto" href="/Gallery">بیشتر</a>
