--- a/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<DataLayer.Models.TblCatagory>
-@{ ViewData["Title"] = "دسته بندی";
-                Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml"; }
+@{
+    ViewData["Title"] = "دسته بندی";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
 
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
@@ -25,28 +27,31 @@
                         <tbody>
                             @if (Model.Count() == 0)
                             {
-                <tr>
-                    <td>
-                        <span>دسته بندی وجود ندارد</span>
-                    </td>
-                </tr> }
+                                <tr>
+                                    <td>
+                                        <span>دسته بندی وجود ندارد</span>
+                                    </td>
+                                </tr>
+                            }
                             else
                             {
-                @foreach (var item in Model)
-                {
-<tr>
-    <td>@item.Name</td>
-    <td>
-        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="مشاهده زیر مجموعه">
-            <a onclick="ShowChildsCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="albums-outline"></a>
-        </span>
-    </td>
-    <td>
-        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-            <a onclick="EditCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
-        </span>
-    </td>
-</tr>}}
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.Name</td>
+                                        <td>
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="مشاهده زیر مجموعه">
+                                                <a onclick="ShowChildsCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="albums-outline"></a>
+                                            </span>
+                                        </td>
+                                        <td>
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                                <a onclick="EditCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                            </span>
+                                        </td>
+                                    </tr>
+                                }
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -62,7 +67,8 @@
 </div>
 
 @section Script{
-    <script>$("#Create").click(function () {
+    <script>
+        $("#Create").click(function () {
             $(".modal-content").html("");
             $.get("/Admin/Catagory/Create", function (result) {
                 $(".modal-content").html(result);
