--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -85,7 +85,7 @@
                     <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm">
                     <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
                 </div>
-                <span class="text-danger" asp-validation-for="MainImage"></span>
+                <span id="MainImageErorr" class="text-danger" asp-validation-for="MainImage"></span>
                 <div class="form-row mt-3">
                     <div class="form-group col-md-3">
                         <label>متن جستجو</label>
@@ -124,6 +124,7 @@
                     <span id="TblColor" asp-validation-for="TblColor" class="text-danger"></span>
                 </div>
                 <aside id="ColorPanel">
+
                 </aside>
                 <hr />
                 <div class="form-row mt-3">
@@ -152,9 +153,8 @@
                 </div>
                 <hr />
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
-                <div class="dropzone jumbotron dz-clickable ui-sortable col-md-7 uk-border-rounded bg-light" id="adropzone">
-                    <div class="dz-default dz-message"><span>تصاویر خود را بگیرید و در این محل رها کنید و یا بر روی این محل کلیک نمایید</span></div>
-                </div>
+                <aside id="GalleryPanel"></aside>
+
             </div>
             <div class="card-footer bg-white">
                 <button type="submit" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
@@ -163,10 +163,11 @@
     </div>
 </div>
 
-<button id="sss">sss</button>
+<form action="/Admin/Upload/uploadgallery" method="post" enctype="multipart/form-data" id="FormGallery">
+</form>
+
 @section Script{
     <script src="~/js/bootstrap-tagsinput.js"></script>
-    <script src="~/js/dropzone.js"></script>
     <script src="~/Validate/jquery.validate.min.js"></script>
     <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
     <style>
@@ -175,7 +176,7 @@
         }
     </style>
     <script>
-
+      
         $(function () {
             $('#DescriptionShortHtml').ckeditor();
             $('#DescriptionLongHtml').ckeditor();
@@ -189,31 +190,6 @@
             $("#CatagoryId").val(Id);
         };
 
-        $("#adropzone").dropzone({
-            url: "/Upload/xxx", paramName: "file", // The name that will be used to transfer the file
-            maxFilesize: 3, // MB
-            addRemoveLinks: true,
-            acceptedFiles: "image/x-png,image/gif,image/jpeg",
-            autoProcessQueue: false,
-            removedfile: function (file) {
-                file.previewElement.remove();
-                UIkit.notification({ message: "فایل با موفقیت حذف شد" });
-            },
-            complete: function (file) {
-                if (file.size > 3000000) {
-                    UIkit.notification({ message: "حجم فایل بیش از اندازه میباشد لطفا بیشتر از 3 مگابایت وارد نکنید" });
-                    file.previewElement.remove();
-                }
-                if (file.type != 'image/jpeg' && file.type != 'image/png') {
-                    UIkit.notification({ message: "فرمت فایل باید jpg یا png و یا jpeg باشد" });
-                    file.previewElement.remove();
-                    return false;
-                }
-
-            }
-
-        });
-
         $("#CreateProduct").submit(function (e) {
             e.preventDefault();
             if ($("#CatagoryId").val() == null || $("#CatagoryId").val() == "") {
@@ -225,21 +201,31 @@
                     $("#BrandIdErorr").html("لطفا برند محصول را انتخاب کنید");
                     window.location.href = "#BrandId";
                 } else {
+
                     $("#BrandIdErorr").html("");
 
                     //Data
+
+                    var Keyword = [];
+                    for (var i = 0; i < $(".tag").length; i++) {
+                        Keyword.push($(".tag")[i].innerText);
+                    }
                     var Form = $(this).serializeArray();
-                    //var Keyword = [];
-                    //var MainImage ="";
-                    //var Gallery = "";
-                    //var Properties = "";
+                    var MainImage = $("#MainImage").get(0).files;
+                    if (MainImage[0].size > 3000000) {
+                        $("#MainImageErorr").html("حجم فایل تصویر اصلی بیش از اندازه میباشد")
+                    } else {
 
-                    $.post("/Admin/Product/Create?product=" + Form + "&Keyword=" + Keyword + "&Gallery=" + Gallery + "&Properties=" + Properties, function (result) {
+                        //var Gallery = "";
+                        //var Properties = "";
+                        //var Colors = "";
 
-                    });
+                        $.post("/Admin/Product/Create?product=" + Form + "&Keyword=" + Keyword + "&Gallery=" + Gallery + "&Properties=" + Properties, function (result) {
 
-
+                        });
+                    }
                 }
+
             }
         });
 
