--- a/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
@@ -11,8 +11,8 @@ else
     {
         <div id="Property" class="form-inline col-md-7">
             <label class="ml-5">@item.Name:</label>
-            <input id="PropetryNameId" type="hidden" value="@item.PropertyId" />
-            <input id="PropertyValue" class="form-control form-control-sm">
+            <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
+            <input id="PropertyValue" name="Value" class="form-control form-control-sm">
         </div>
     }
 }
