--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -7,12 +7,7 @@
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
 
-        <form id="CreateProduct" class="card flex-div border-0 main-shadow"
-              data-ajax="true"
-              data-ajax-method="POST"
-              data-ajax-mode="replace"
-              data-ajax-complete="EndCatagoryCreate()"
-              data-ajax-update="#ajaxresult">
+        <form asp-action="Create" asp-controller="Product" asp-area="Admin" method="post" class="card flex-div border-0 main-shadow" enctype="multipart/form-data">
             @Html.AntiForgeryToken()
             <div class="card-body flex">
                 <ul uk-accordion class="bg-light mt-3 pt-3 pb-3 uk-text-small uk-border-rounded">
@@ -138,7 +133,7 @@
                     </div>
                 </div>
                 <aside id="PropertyPanel">
-                    @await Component.InvokeAsync("ProperyListAdmin")
+                    @await Component.InvokeAsync("PropertyListAdmin")
                 </aside>
                 <hr />
                 <div class="mt-3">
@@ -153,7 +148,12 @@
                 </div>
                 <hr />
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
-                <aside id="GalleryPanel"></aside>
+                &nbsp;<span onclick="SetNewInputGallery()" class="text-success"uk-icon="add-circle-outline"></span>
+                &nbsp;<span onclick="RemoveInputGallery()" class="text-danger" uk-icon="remove-circle-outline"></span>
+
+                <ol id="GalleryPanel">
+
+                </ol>
 
             </div>
             <div class="card-footer bg-white">
@@ -163,8 +163,6 @@
     </div>
 </div>
 
-<form action="/Admin/Upload/uploadgallery" method="post" enctype="multipart/form-data" id="FormGallery">
-</form>
 
 @section Script{
     <script src="~/js/bootstrap-tagsinput.js"></script>
@@ -176,6 +174,14 @@
         }
     </style>
     <script>
+
+        function SetNewInputGallery() {
+            $("#GalleryPanel").append("<li><input type='file' name='GalleryFile'/></i>");
+        }
+
+        function RemoveInputGallery() {
+            $("#GalleryPanel li").last().remove();
+        }
       
         $(function () {
             $('#DescriptionShortHtml').ckeditor();
@@ -190,45 +196,6 @@
             $("#CatagoryId").val(Id);
         };
 
-        $("#CreateProduct").submit(function (e) {
-            e.preventDefault();
-            if ($("#CatagoryId").val() == null || $("#CatagoryId").val() == "") {
-                $("#CatagoryIdErorr").html("لطفا دسته بندی را وارد کنید");
-                window.location.href = "#CatagoryId";
-            } else {
-                $("#CatagoryIdErorr").html("");
-                if ($("#BrandId option:selected").val() == 0) {
-                    $("#BrandIdErorr").html("لطفا برند محصول را انتخاب کنید");
-                    window.location.href = "#BrandId";
-                } else {
-
-                    $("#BrandIdErorr").html("");
-
-                    //Data
-
-                    var Keyword = [];
-                    for (var i = 0; i < $(".tag").length; i++) {
-                        Keyword.push($(".tag")[i].innerText);
-                    }
-                    var Form = $(this).serializeArray();
-                    var MainImage = $("#MainImage").get(0).files;
-                    if (MainImage[0].size > 3000000) {
-                        $("#MainImageErorr").html("حجم فایل تصویر اصلی بیش از اندازه میباشد")
-                    } else {
-
-                        //var Gallery = "";
-                        //var Properties = "";
-                        //var Colors = "";
-
-                        $.post("/Admin/Product/Create?product=" + Form + "&Keyword=" + Keyword + "&Gallery=" + Gallery + "&Properties=" + Properties, function (result) {
-
-                        });
-                    }
-                }
-
-            }
-        });
-
         $("#SubmitColor").click(function () {
             var Color = $("#InputColor").val();
             var Name = $("#InputColorName").val();
@@ -242,7 +209,7 @@
                 $("#InputColorCount").val("");
                 $("#ColorPanel").html(
                     $("#ColorPanel").html() +
-                    "<div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ :" + Name + "</label><div class='uk-border-rounded mr-2 color-box' style='background:" + Color + ";'></div><label class='mr-2'>" + Count + " عدد</label><span class='text-danger'>&nbsp;(x)</span></div>"
+                    "<div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ :" + Name + "</label><div class='uk-border-rounded mr-2 color-box' style='background:" + Color + ";'></div><label class='mr-2'>" + Count + " عدد</label><input type='hidden' name='Colors' value='" + Color + "' /><input type='hidden' name='ColorsCounts' value='" + Count + "' /><span class='text-danger'>&nbsp;(x)</span></div>"
                 );
             }
         });
