--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -3,93 +3,38 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 @section Styles{
-
     <link href="~/css/pages/index.min.css" rel="stylesheet" />
-
 }
-
 @section Aside{
     <div class="categories">
         <ul>
             @await Component.InvokeAsync("BrandListView")
         </ul>
     </div>
-
     <div class="mat mat-border">
         <partial name="_ExpressProductBlock" />
     </div>
-
     <div swap="hello"><partial name="_Ad" /></div>
-
-    <partial name="_Ad" />
-
-    <partial name="_Ad" />
-
+    <partial name="_Ad"/>
+    <partial name="_Ad"/>
 }
-
-<div class="main-slideshow uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="ratio:16:7">
-
-    <ul class="uk-slideshow-items">
-        <li>
-            <a href="/"><img src="~/st/r/ads/a1.jpg" alt="" uk-cover></a>
-        </li>
-        <li>
-            <a href="/"><img src="~/st/r/ads/a2.jpg" alt="" uk-cover></a>
-        </li>
-        <li>
-            <a href="/"><img src="~/st/r/ads/a3.jpg" alt="" uk-cover></a>
-        </li>
-    </ul>
-
-    <div class="navigation uk-position-bottom-center uk-position-small">
-        <ul class="uk-dotnav">
-            <li uk-slideshow-item="0"><a href="#">Item 1</a></li>
-            <li uk-slideshow-item="1"><a href="#">Item 2</a></li>
-            <li uk-slideshow-item="2"><a href="#">Item 3</a></li>
-        </ul>
-    </div>
-
-</div>
+<!-- #SliderView -->
+@await Component.InvokeAsync("SliderView")
+<!-- #SliderView -->
 <!-- #Product -->
 @await Component.InvokeAsync("ProductView")
-
 <!-- #Product -->
-
 <!-- #Blogs -->
 @await Component.InvokeAsync("BlogsView")
 <!-- #Blogs -->
 <div id="hello"></div>
+<!-- #GalleryView -->
 @await Component.InvokeAsync("GalleryView")
+<!-- #GalleryView -->
+<!-- #DeliveryView -->
 @await Component.InvokeAsync("DeliveryView")
-
-<div class="questions mat-card uk-padding-remove">
-    <a href="#faq" name="faq"></a>
-    <h3>
-        پاسخ به سوالات شما
-    </h3>
-    <hr class="uk-margin-remove" />
-    <div>
-        <ul uk-accordion class="uk-margin-remove-top">
-            <li>
-                <a class="uk-accordion-title" href="#">این یک سوال می باشد</a>
-                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
-                    این جواب سوال می باشد
-                </p>
-            </li>
-            <li>
-                <a class="uk-accordion-title" href="#">این هم یک سوال می باشد</a>
-                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
-                    این جواب سوال می باشد
-                </p>
-            </li>
-            <li>
-                <a class="uk-accordion-title" href="#">این یک سوال می باشد</a>
-                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
-                    این جواب سوال می باشد
-                </p>
-            </li>
-        </ul>
-    </div>
-</div>
+<!-- #DeliveryView -->
+<!-- #questions -->
+@await Component.InvokeAsync("QuestionsView")
+<!-- #questions -->
